Avoid z-index woes on n-delegates-to-win

--- a/assets/stylesheets/main/horse-races.css.scss
+++ b/assets/stylesheets/main/horse-races.css.scss
@@ -10,10 +10,10 @@ $wavy-path: 'M0,1C3,1 2,2 5,2C8,2 7,1 10,1L11,1L11,6L-1,6L-1,1Z';
 
   .n-delegates-needed {
     position: absolute;
-    right: 1rem;
+    top: 2.5rem;
+    right: 0;
     line-height: 1.5rem;
     font-size: .8rem;
-    z-index: 1;
   }
 
   ol.candidate-horses {
